# granite-speedbench

./: .gitignore  README.md  add_to_cli.sh  granite-speedbench.py  pyproject.toml
granite_speedbench/: cli.py
granite_speedbench/tests/: 10000_code.txt  1000_code.txt  1000_text.txt  20000_code.txt  2000_code.txt  2000_text.txt  4000_code.txt  4000_text.txt  check_context.py
tests/: 1000_code.txt  1000_text.txt  2000_code.txt  2000_text.txt  4000_code.txt  4000_text.txt  check_context.py
